# DeepLearningProject

./: .gitmodules
code-generation/: .gitignore  code-generation.cabal  stack.yaml
code-generation/data/: med2.csv
code-generation/src/: Main.hs
code-generation/src/Haskell/: Main.hs
code-generation/src/Haskell/CodeGeneration/: EvalFile.hs  Generation.hs
code-generation/src/Prolog/: generate.pl
code-generation/src/Python/: error-prediction.ipynb  error.py  generate.py  output-prediction.ipynb  output.py  train.py  trainingHyperparameters.py
docs/: report.tex
