name:                code-generation
version:             0.1.0.0
homepage:            https://github.com/rbubulka/DeepLearningProject
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:

executable code-generation
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
